welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var test=0
  var indice = 0
  for (l <- 0 to nums.length-1){
    if (nums(l)>test){
      test = nums(l)
      indice =l
    }  
  }
  return indice
}